--- a/package.yml
+++ b/package.yml
@@ -36,6 +36,6 @@ page:
             icon: rex-icon fa-edit
             hidden: true
         beholder:
-            title: Hausmeister'
+            title: 'Hausmeister'
             icon: rex-icon fa-edit
             hidden: true
