--- a/package.yml
+++ b/package.yml
@@ -35,3 +35,6 @@ page:
             title: 'Tabelle bearbeiten'
             icon: rex-icon fa-edit
             hidden: true
+        records:
+            title: 'Hausmeister'
+            icon: rex-icon fa-edit 
